Fix vertical alignment for description rows in Swagger UI model box (#164)
* Fix vertical alignment for description rows in Swagger UI model box

* Update CHANGELOG.md to include fix for vertical alignment in Swagger UI model box

--- a/app/assets/stylesheets/grape_swagger_rails/index.css
+++ b/app/assets/stylesheets/grape_swagger_rails/index.css
@@ -231,6 +231,7 @@ html[data-theme="dark"] .swagger-ui .model-box {
   border-color: #475569;
 }
 
+.swagger-ui .model-box table.model tr.description > td,
 .swagger-ui .model-box table.model tr.property-row > td {
   vertical-align: baseline;
 }
